Added base of lab4

--- a/notebooks/Lab3.ipynb
+++ b/notebooks/Lab3.ipynb
@@ -17,17 +17,10 @@
     "<b>TA's: Melis Öcal, Ronny Velastegui Sandoval</b>\n",
     "\n",
     "Student1 ID: \\\n",
-    "Student1 Name:\n",
+    "Student1 Name: Dominykas Seputis\n",
     "\n",
     "Student2 ID: \\\n",
-    "Student2 Name:\n",
-    "\n",
-    "Student3 ID: \\\n",
-    "Student3 Name:\n",
-    "\n",
-    "( Student4 ID: \\\n",
-    "Student4 Name: )\n",
-    "\n"
+    "Student2 Name: Soham Chatterjee\n"
    ]
   },
   {
@@ -1074,78 +1067,6 @@
     "Consistency and Stability: Feature tracking can help improve the stability and consistency of results in video analysis tasks. By maintaining a set of tracked features, we can reduce jitter or noise in the estimated motion and make it more reliable.\n",
     "\n",
     "Reducing False Positives: In some cases, feature detection methods might produce false positives, identifying features that are not of interest. Feature tracking can help filter out such false positives and focus on tracking only the relevant features."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "uEeYJPdLoPrS"
-   },
-   "source": [
-    "# X Individual Contribution Report *(Mandatory)*\n",
-    "\n",
-    "Because we want each student to contribute fairly to the submitted work, we ask you to fill out the textcells below. Write down your contribution to each of the assignment components in percentages. Naturally, percentages for one particular component should add up to 100% (e.g. 30% - 30% - 40%). No further explanation has to be given.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "f4b505e0"
-   },
-   "source": [
-    "Name:\n",
-    "\n",
-    "Contribution on research: \\\n",
-    "Contribution on programming: \\\n",
-    "Contribution on writing:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "qFKwJfVmN92i"
-   },
-   "source": [
-    "Name:\n",
-    "\n",
-    "Contribution on research: \\\n",
-    "Contribution on programming: \\\n",
-    "Contribution on writing:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ndnhlE0WN959"
-   },
-   "source": [
-    "Name:\n",
-    "\n",
-    "Contribution on research: \\\n",
-    "Contribution on programming: \\\n",
-    "Contribution on writing:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "nYQBu2hFN993"
-   },
-   "source": [
-    "Name:\n",
-    "\n",
-    "Contribution on research: \\\n",
-    "Contribution on programming: \\\n",
-    "Contribution on writing:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "0-VF0NFNOB5T"
-   },
-   "source": [
-    "# - End of notebook -"
    ]
   }
  ],
